<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="10dp"
        android:text="@string/signup"/>

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_acoount_login"
        android:textSize="15sp"/>

</LinearLayout>